--- a/Student/P4/Projekt_4_full_titanic.ipynb
+++ b/Student/P4/Projekt_4_full_titanic.ipynb
@@ -231,8 +231,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hisotgramy zmiennych niezależnych\n",
-    "x.hist(figsize=(15,15), bins=20)"
+    "# Histogramy zmiennych niezależnych\n",
+    "x.hist(figsize=(10,8), bins=20, edgecolor='black', grid=False)"
    ]
   },
   {
@@ -277,9 +277,9 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(17, 10))\n",
+    "fig, ax = plt.subplots(figsize=(10, 8))\n",
     "\n",
-    "sns.heatmap(x.select_dtypes(exclude='object').corr(), ax=ax, annot=True)"
+    "sns.heatmap(x.select_dtypes(exclude='object').corr(), ax=ax, annot=True, fmt=\".2f\", cmap=\"coolwarm\", center=0)"
    ]
   },
   {
@@ -342,6 +342,16 @@
    "metadata": {},
    "source": [
     "### Walidacja krzyżowa dla domyślnych hiperparametrów"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Jaki wpływ na model może mieć podział danych wejściowych na zestaw treningowy i walidacyjny?\n",
+    "- Jak zachować się w przypadku małych zestawów danych?\n",
+    "\n",
+    "-> **Walidacja krzyżowa**"
    ]
   },
   {
@@ -616,7 +626,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_ml",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
