--- a/Student/P3/Projekt_3_full_housing_boston.ipynb
+++ b/Student/P3/Projekt_3_full_housing_boston.ipynb
@@ -73,7 +73,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "DATASET_PATH = \"Dane\\\\BostonHousing.csv\""
+    "DATASET_PATH = \"Dane\\\\BostonHousing.csv\" # Ścieżka do pliku z danymi"
    ]
   },
   {
@@ -102,6 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Własne etykiety i opisy dla cech\n",
     "DATASET_FEATURE_DSCRB = {\n",
     "    \"crim\": \"Per capita crime rate by town\",\n",
     "    \"zn\": \"Proportion of residential land zoned for lots over 25,000 sq.ft\",\n",
@@ -115,7 +116,7 @@
     "    \"tax\": \"Full-value property-tax rate per $10,000\",\n",
     "    \"ptratio\": \"Pupil-teacher ratio by town\",\n",
     "    \"b\": \"1000(Bk - 0.63)^2 where Bk is the proportion of blacks by town\",\n",
-    "    \"lstat\": r\"% lower status of the population\",\n",
+    "    \"lstat\": \"[%] lower status of the population\",\n",
     "    \"medv\": \"Median value of owner-occupied homes in $1000's\",\n",
     "}\n",
     "DATASET_FEATURE_LABELS = {\n",
@@ -188,6 +189,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Dane numeryczne**: 0, 1, -2, 1.37 ...\n",
+    "\n",
+    "**Dane kategorialne**: \"A\", \"samochód\", \"A23-1b\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -203,6 +213,15 @@
    "metadata": {},
    "source": [
     "### Wydzielenie zmiennej zależnej"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zmienne wejściowe, cechy - zmienne **niezależne**\n",
+    "\n",
+    "Zmienna wyjściowa, wynik - zmienna **zależna**"
    ]
   },
   {
@@ -223,6 +242,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exploratory Data Analysis\n",
+    "\n",
+    "Eksploracyjna Analiza Danych"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -238,8 +266,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hisotgramy zmiennych niezależnych\n",
-    "x.hist(figsize=(15,10), bins=20)"
+    "# Histogramy zmiennych niezależnych\n",
+    "x.hist(figsize=(15,10), bins=20, edgecolor='black', grid=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Histogram zmiennej zależnej\n",
+    "fig,axes = plt.subplots(figsize=(5,3))\n",
+    "axes.hist(y*1000, bins=20, edgecolor='black')\n",
+    "axes.set_xlabel('Median value of owner-occupied homes in $')\n",
+    "axes.set_ylabel('Frequency')\n",
+    "axes.set_title('Histogram of Median Value')\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -274,9 +317,9 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "fig, ax = plt.subplots(figsize=(10, 8))\n",
     "\n",
-    "sns.heatmap(x.select_dtypes(exclude='object').corr(), ax=ax, annot=True)"
+    "sns.heatmap(x.select_dtypes(exclude='object').corr(), ax=ax, annot=True, fmt=\".2f\", cmap=\"coolwarm\", center=0)"
    ]
   },
   {
@@ -284,6 +327,16 @@
    "metadata": {},
    "source": [
     "### Train, Test, Val split"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podział na trzy **niezależne** zestawy:\n",
+    "* train - przygotowanie modelu\n",
+    "* val - ocena i strojenie modelu\n",
+    "* test - ostateczna ewaluacja"
    ]
   },
   {
@@ -296,8 +349,8 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.4, random_state=5, shuffle=True)\n",
-    "x_val, x_test, y_val, y_test = train_test_split(x_test, y_test, test_size=0.5, random_state=5, shuffle=True)"
+    "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.4, random_state=42, shuffle=True)\n",
+    "x_val, x_test, y_val, y_test = train_test_split(x_test, y_test, test_size=0.5, random_state=42, shuffle=True)"
    ]
   },
   {
@@ -348,9 +401,10 @@
     "from sklearn.compose import make_column_transformer\n",
     "\n",
     "\n",
-    "col_categorical = x_train.select_dtypes(include='object').columns\n",
-    "col_numerical = x_train.select_dtypes(exclude='object').columns\n",
+    "col_categorical = x_train.select_dtypes(include='object').columns # Kolumny kategoryczne\n",
+    "col_numerical = x_train.select_dtypes(exclude='object').columns # Kolumny numeryczne\n",
     "\n",
+    "# Transformer kolumn - pozwala skalować lub enkodować kolumny zależnie od ich rodzaju (numerical/categorical)\n",
     "col_transformer = make_column_transformer(\n",
     "    (StandardScaler(), col_numerical),\n",
     "    (OrdinalEncoder(), col_categorical)\n",
@@ -384,6 +438,7 @@
     "\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
+    "# Pipeline dla regresji liniowej\n",
     "linear_regressor = Pipeline([\n",
     "    ('col_transformer', col_transformer),\n",
     "    ('linear_regressor', LinearRegression(positive=True))\n",
@@ -391,8 +446,10 @@
     "linear_regressor.fit(x_train, y_train)\n",
     "\n",
     "y_pred = linear_regressor.predict(x_train)\n",
-    "print(f\"RMSE: {mean_squared_error(y_train, y_pred)**.5:.2f}\")\n",
-    "print(f\"R^2: {r2_score(y_train, y_pred):.3f}\")\n",
+    "rmse_linear = mean_squared_error(y_train, y_pred)**.5\n",
+    "r2_linear = r2_score(y_train, y_pred)\n",
+    "print(f\"RMSE: {rmse_linear:.2f}\")\n",
+    "print(f\"R^2: {r2_linear:.3f}\")\n",
     "\n",
     "fig, ax = plt.subplots(1,1,figsize=(5,5))\n",
     "\n",
@@ -415,6 +472,7 @@
     "\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "\n",
+    "# Pipeline dla drzewa decyzyjnego\n",
     "decision_tree = Pipeline([\n",
     "    ('col_transformer', col_transformer),\n",
     "    ('decision_tree', DecisionTreeRegressor())\n",
@@ -422,8 +480,10 @@
     "decision_tree.fit(x_train, y_train)\n",
     "\n",
     "y_pred = decision_tree.predict(x_train)\n",
-    "print(f\"RMSE: {mean_squared_error(y_train, y_pred)**.5:.2f}\")\n",
-    "print(f\"R^2: {r2_score(y_train, y_pred):.3f}\")\n",
+    "rmse_tree = mean_squared_error(y_train, y_pred)**.5\n",
+    "r2_tree = r2_score(y_train, y_pred)\n",
+    "print(f\"RMSE: {rmse_tree:.2f}\")\n",
+    "print(f\"R^2: {r2_tree:.3f}\")\n",
     "\n",
     "fig, ax = plt.subplots(1,1,figsize=(5,5))\n",
     "\n",
@@ -434,6 +494,17 @@
     "ax.set_title(\"Zestaw treningowy\")\n",
     "ax.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Regresja liniowa vs Drzewo decyzyjne (test na zestawie treningowym)\")\n",
+    "print(f\"RMSE: {rmse_linear:.2f} vs {rmse_tree:.2f} (niższa wartość lepsza)\")\n",
+    "print(f\"R^2: {r2_linear:.3f} vs {r2_tree:.3f} (wyższa wartość lepsza)\")"
    ]
   },
   {
@@ -452,8 +523,10 @@
     "# Ewaluacja regresji liniowej na zestawie walidacyjnym\n",
     "\n",
     "y_pred = linear_regressor.predict(x_val)\n",
-    "print(f\"RMSE: {mean_squared_error(y_val, y_pred)**.5:.2f}\")\n",
-    "print(f\"R^2: {r2_score(y_val, y_pred):.3f}\")\n",
+    "rmse_linear = mean_squared_error(y_val, y_pred)**.5\n",
+    "r2_linear = r2_score(y_val, y_pred)\n",
+    "print(f\"RMSE: {rmse_linear:.2f}\")\n",
+    "print(f\"R^2: {r2_linear:.3f}\")\n",
     "\n",
     "fig, ax = plt.subplots(1,1,figsize=(5,5))\n",
     "\n",
@@ -475,8 +548,10 @@
     "# Ewaluacja drzewa decyzyjnego na zestawie walidacyjnym\n",
     "\n",
     "y_pred = decision_tree.predict(x_val)\n",
-    "print(f\"RMSE: {mean_squared_error(y_val, y_pred)**.5:.2f}\")\n",
-    "print(f\"R^2: {r2_score(y_val, y_pred):.3f}\")\n",
+    "rmse_tree = mean_squared_error(y_val, y_pred)**.5\n",
+    "r2_tree = r2_score(y_val, y_pred)\n",
+    "print(f\"RMSE: {rmse_tree:.2f}\")\n",
+    "print(f\"R^2: {r2_tree:.3f}\")\n",
     "\n",
     "fig, ax = plt.subplots(1,1,figsize=(5,5))\n",
     "\n",
@@ -487,6 +562,17 @@
     "ax.set_title(\"Zestaw walidacyjny\")\n",
     "ax.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Regresja liniowa vs Drzewo decyzyjne (test na zestawie walidacyjnym)\")\n",
+    "print(f\"RMSE: {rmse_linear:.2f} vs {rmse_tree:.2f} (niższa wartość lepsza)\")\n",
+    "print(f\"R^2: {r2_linear:.3f} vs {r2_tree:.3f} (wyższa wartość lepsza)\")"
    ]
   },
   {
@@ -548,6 +634,8 @@
    "source": [
     "# Ewaluacja na zestawie walidacyjnym\n",
     "y_pred = decision_tree.predict(x_val)\n",
+    "rmse_tree_tuned = mean_squared_error(y_val, y_pred)**.5\n",
+    "r2_tree_tuned = r2_score(y_val, y_pred)\n",
     "print(f\"RMSE: {mean_squared_error(y_val, y_pred)**.5:.2f}\")\n",
     "print(f\"R^2: {r2_score(y_val, y_pred):.3f}\")\n",
     "\n",
@@ -560,6 +648,17 @@
     "ax.set_title(\"Zestaw walidacyjny\")\n",
     "ax.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Drzewo decyzyjne vs Drzewo decyzyjne ze strojonymi hiperparametrami (test na zestawie walidacyjnym)\")\n",
+    "print(f\"RMSE: {rmse_tree:.2f} vs {rmse_tree_tuned:.2f} (niższa wartość lepsza)\")\n",
+    "print(f\"R^2: {r2_tree:.3f} vs {r2_tree_tuned:.3f} (wyższa wartość lepsza)\")"
    ]
   },
   {
@@ -700,8 +799,10 @@
    "source": [
     "# Ewaluacja na zestawie walidacyjnym\n",
     "y_pred = decision_tree.predict(x_val)\n",
-    "print(f\"RMSE: {mean_squared_error(y_val, y_pred)**.5:.2f}\")\n",
-    "print(f\"R^2: {r2_score(y_val, y_pred):.3f}\")\n",
+    "rmse_tree_fewerftrs = mean_squared_error(y_val, y_pred)**.5\n",
+    "r2_tree_fewerftrs = r2_score(y_val, y_pred)\n",
+    "print(f\"RMSE: {rmse_tree_fewerftrs:.2f}\")\n",
+    "print(f\"R^2: {r2_tree_fewerftrs:.3f}\")\n",
     "\n",
     "fig, ax = plt.subplots(1,1,figsize=(5,5))\n",
     "\n",
@@ -712,6 +813,17 @@
     "ax.set_title(\"Zestaw walidacyjny\")\n",
     "ax.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Drzewo decyzyjne vs Drzewo decyzyjne bez nieistotnych cech (test na zestawie walidacyjnym)\")\n",
+    "print(f\"RMSE: {rmse_tree:.2f} vs {rmse_tree_fewerftrs:.2f} (niższa wartość lepsza)\")\n",
+    "print(f\"R^2: {r2_tree:.3f} vs {r2_tree_fewerftrs:.3f} (wyższa wartość lepsza)\")"
    ]
   },
   {
@@ -741,11 +853,18 @@
     "ax.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jak zmiana *SEED'a* pdoczas podziału na zestawy train/test/val wpływa na wyniki modelu?"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_ml",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
