Dodano opisy dla wykresu BoxPlot

--- a/Student/P3/Projekt_3_full_housing_boston.ipynb
+++ b/Student/P3/Projekt_3_full_housing_boston.ipynb
@@ -297,13 +297,50 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Zmienna zależna Y(median value) w zależności od ilości pokojów \n",
+    "print(\"Dlaczego w boxplot wartości są zaokrąglone?\")\n",
+    "print(\n",
+    "f\"\"\"Mamy wartości ciągłe, w zakresie od {np.min(x['No. rooms'])} do {np.max(x['No. rooms'])}.\n",
+    "Wartości unikalnych jest aż {len(np.unique(x['No. rooms']))} a każda z nich znajdzie się na osi X.\n",
+    "Musimy więc zgrupować te wartości. Najłatwiej zrobić to poprzez zaokrąglenie. W tym przypadku (dla takeigo zakres wartości) zaokrąglimy do pełnych liczb używając round().\n",
+    "Teraz na osi X znajdzie się {len(np.unique(x['No. rooms'].round()))} punktów, są to {np.unique(x['No. rooms'].round())}.\n",
+    "Dzięki temu zobaczymy jak zmienia się wartość nieruchomości w zależności od ilości pokojów.\n",
+    "Wartości na osi Y nie zaokrąglamy!\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
     "plt.clf()\n",
     "sns.boxplot(y=y, x=x[\"No. rooms\"].round())\n",
     "plt.show()\n",
     "\n",
+    "print(\n",
+    "f\"\"\"Teraz wartości są w zakresie od {np.min(y)} do {np.max(y)}.\n",
+    "Wartości unikalnych jest aż {len(np.unique(y))}\n",
+    "Zastosujemy zaokrąglenie do dziesiątek używając round(-1).\n",
+    "Teraz na osi X znajdzie się {len(np.unique(y.round(-1)))} punktów, są to {np.unique(y.round(-1))}.\n",
+    "Dzięki temu zobaczymy jak zmienia się od ilości pokojów w zależności od wartości nieruchomości.\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
     "plt.clf()\n",
     "sns.boxplot(y=x[\"No. rooms\"], x=y.round(-1))\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "print(\n",
+    "\"\"\"W zależności od danych musimy zastosować odpowiednie zaokrąglenie.\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "plt.clf()\n",
+    "sns.boxplot(y=x[\"weighted dist.\"], x=(x[\"industry prop.\"]/5).round()*5) # do pełnych 5\n",
+    "plt.show()\n",
+    "plt.clf()\n",
+    "sns.boxplot(y=x[\"industry prop.\"], x=x[\"weighted dist.\"].round()) \n",
+    "plt.show()\n",
+    "\n",
+    "print(\n",
+    "\"\"\"Wykresy BoxPlot świetnie obrazują zależności między cechami - należy je stosować do \\\"interesujących\\\" par.\n",
+    "\"\"\"\n",
+    ")\n"
    ]
   },
   {
@@ -712,7 +749,7 @@
     "axes[0].set_xticklabels(x_train.columns.values, rotation = 90)\n",
     "axes[0].set_title(\"Ważność cech wyznaczona metodą LASSO\")\n",
     "axes[0].set_xlabel(\"Nazwa cechy\")\n",
-    "axes[0].set_ylabel(\"Wpływ\")\n",
+    "axes[0].set_ylabel(\"Istotność\")\n",
     "\n",
     "axes[1].bar(x_train.columns.values, decision_tree_coef)\n",
     "axes[1].grid()\n",
