--- a/Student/P4/Projekt_4_full_titanic.ipynb
+++ b/Student/P4/Projekt_4_full_titanic.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "fig, axes = plt.subplots(1, 3, figsize=(12, 4))\n",
     "\n",
-    "x, y = make_blobs(n_samples=300, n_features=2, random_state=1, centers=5, shuffle=True, cluster_std=1.5)\n",
+    "x, y = make_blobs(n_samples=300, n_features=2, random_state=12, centers=3, shuffle=True, cluster_std=1.5)\n",
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.30, random_state=0, shuffle=True, stratify=y)\n",
     "\n",
@@ -50,10 +50,10 @@
     "    axes[i].set_xticks(())\n",
     "    axes[i].set_yticks(())\n",
     "\n",
-    "    axes[i].set_xlabel(\"x\")\n",
-    "    axes[0].set_ylabel(\"y\")\n",
+    "    axes[i].set_xlabel(\"Dimension 1\")\n",
+    "    axes[0].set_ylabel(\"Dimension 2\")\n",
     "\n",
-    "    axes[i].set_title(f\"Acc = {accuracy_score(y_test, y_pred):.2f}\")\n",
+    "    axes[i].set_title(f\"Accuracy = {accuracy_score(y_test, y_pred):.2f}\")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -246,24 +246,20 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "for col_name in [\n",
-    "  \"Age\", \"Passenger Fare\"\n",
-    "]:\n",
-    "  plt.clf()\n",
-    "  sns.boxplot(x=y, y=x[col_name], hue=y)\n",
-    "  plt.show()\n",
     "\n",
-    "plt.clf()\n",
-    "sns.boxplot(x=x[\"Class\"], y=x[\"Passenger Fare\"])\n",
+    "fig, axes = plt.subplots(1,3,figsize=(12,4))\n",
+    "sns.boxplot(x=y, y=x[\"Age\"], ax=axes[0])\n",
+    "sns.boxplot(x=y, y=x[\"Age\"], hue=x[\"Class\"], ax=axes[1])\n",
+    "sns.boxplot(x=x[\"Sex\"], y=x[\"Age\"], hue=y, ax=axes[2])\n",
+    "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "plt.clf()\n",
-    "sns.boxplot(x=x[\"Class\"], y=x[\"Age\"])\n",
-    "plt.show()\n",
-    "\n",
-    "plt.clf()\n",
-    "sns.boxplot(x=x[\"Class\"], y=x[\"Age\"], hue=y)\n",
-    "plt.show()"
+    "fig, axes = plt.subplots(1,3,figsize=(12,4))\n",
+    "sns.boxplot(x=y, y=x[\"Passenger Fare\"], ax=axes[0])\n",
+    "sns.boxplot(x=y, y=x[\"Passenger Fare\"], hue=x[\"Class\"], ax=axes[1])\n",
+    "sns.boxplot(x=x[\"Class\"], y=x[\"Passenger Fare\"], ax=axes[2])\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -328,12 +324,12 @@
     "\n",
     "svc = Pipeline([\n",
     "    ('col_transformer', col_transformer),\n",
-    "    ('svc', SVC()),\n",
+    "    ('svc', SVC(kernel=\"linear\", C=1.0)),\n",
     "])\n",
     "\n",
     "knn = Pipeline([\n",
     "    ('col_transformer', col_transformer),\n",
-    "    ('knn', KNeighborsClassifier()),\n",
+    "    ('knn', KNeighborsClassifier(n_neighbors=3)),\n",
     "])\n"
    ]
   },
@@ -351,7 +347,8 @@
     "- Jaki wpływ na model może mieć podział danych wejściowych na zestaw treningowy i walidacyjny?\n",
     "- Jak zachować się w przypadku małych zestawów danych?\n",
     "\n",
-    "-> **Walidacja krzyżowa**"
+    "-> **Walidacja krzyżowa**:\n",
+    "Zastosujemy walidację krzyżową aby porównać dwa modele - kNN oraz SVC."
    ]
   },
   {
@@ -415,7 +412,7 @@
     "\n",
     "parameters = {\n",
     "    'knn__n_neighbors': [1, 3, 5, 7, 9, 11],\n",
-    "    'knn__metric': ['minkowski', 'euclidean', 'cosine', 'cityblock', 'l1', 'l2', 'nan_euclidean'],\n",
+    "    'knn__metric': ['euclidean', 'cosine', 'cityblock', 'l1', 'l2', 'nan_euclidean'],\n",
     "}\n",
     "grid_search = GridSearchCV(knn, parameters)\n",
     "grid_search.fit(x, y)\n",
