--- a/Student/P5/Projekt_5_FashionMNIST.ipynb
+++ b/Student/P5/Projekt_5_FashionMNIST.ipynb
@@ -67,8 +67,8 @@
     "\n",
     "fig, axes = plt.subplots(ncols=3, nrows=5, figsize=(4, 5))\n",
     "axes = axes.flatten()\n",
-    "for i,(img, label) in enumerate(train_dataset):\n",
     "\n",
+    "for i,(img, label) in enumerate(train_dataset):\n",
     "  if i >= 15: break\n",
     "\n",
     "  axes[i].imshow(img[0, :, :], cmap=\"gray\")\n",
@@ -92,17 +92,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# WŁASNA SIEĆ NEURONOWA\n",
+    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "from torchvision.models import resnet18, ResNet18_Weights\n",
+    "\n",
     "\n",
     "class CustomCNN(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.conv1 = nn.Conv2d(in_channels=1, out_channels=8, kernel_size=3)\n",
-    "        self.pool = nn.AvgPool2d(2, 2)\n",
+    "        # Convolutional layers\n",
+    "        self.conv1 = nn.Conv2d(in_channels=1, out_channels=8, kernel_size=3)        \n",
     "        self.conv2 = nn.Conv2d(in_channels=8, out_channels=16, kernel_size=3)\n",
+    "        # Pooling layer\n",
+    "        self.pool = nn.AvgPool2d(2, 2)\n",
+    "        # Fully connected layers\n",
     "        self.fc1 = nn.Linear(16*5*5, 128)\n",
     "        self.fc2 = nn.Linear(128, 64)\n",
     "        self.fc3 = nn.Linear(64, 10)\n",
@@ -116,18 +121,107 @@
     "        x = self.fc3(x)\n",
     "        return x\n",
     "    \n",
-    "model_custom = CustomCNN()\n",
+    "model_custom = CustomCNN()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RESNET18\n",
+    "from torchvision.models import resnet18, ResNet18_Weights\n",
     "\n",
     "model_resnet = resnet18(weights=ResNet18_Weights.IMAGENET1K_V1)\n",
-    "# Zmiana pierwszej warstwy konwolucyjnej na 1 kanał ze dla zdjęć GRAYSCALE\n",
-    "model_resnet.conv1 = nn.Conv2d(1, 64, kernel_size=7, stride=2, padding=3,bias=False)"
+    "\n",
+    "model_resnet.conv1 = nn.Conv2d(1, 64, kernel_size=7, stride=2, padding=3,bias=False) # Zmiana pierwszej warstwy konwolucyjnej na 1 kanał ze dla zdjęć GRAYSCALE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Custom model: {sum(p.numel() for p in model_custom.parameters() if p.requires_grad)} trenowalnych parametrów\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"ResNet18: {sum(p.numel() for p in model_resnet.parameters() if p.requires_grad)} trenowalnych parametrów\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install torchview\n",
+    "from torchview import draw_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "model_visualizer = draw_graph(model_custom, input_size=(batch_size, 1, 28, 28)) # input_size=(batch_size, 1, 28, 28) - rozmiar wejściowy (B, C, H, W)\n",
+    "model_visualizer.visual_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_visualizer = draw_graph(model_resnet, input_size=(batch_size, 1, 28, 28)) # input_size=(batch_size, 1, 28, 28) - rozmiar wejściowy (B, C, H, W)\n",
+    "model_visualizer.visual_graph"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Definiowanie parametrów treningu"
+    "### Trening modeli"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_loss(train_loss, val_loss, val_accuracy, save_name):\n",
+    "\n",
+    "    fig, axes = plt.subplots(ncols=2, figsize=(8, 4))\n",
+    "\n",
+    "    \n",
+    "    axes[0].plot(val_loss, marker='.', label='Validation')\n",
+    "    axes[0].plot(train_loss, marker='.', label='Train')\n",
+    "    axes[1].plot(val_accuracy, marker='.', label='Validation')\n",
+    "\n",
+    "    axes[0].legend()\n",
+    "    axes[1].legend()\n",
+    "\n",
+    "    axes[0].set_xlabel(\"Epoch\")\n",
+    "    axes[0].set_ylabel(\"Loss\")\n",
+    "    \n",
+    "    axes[1].set_xlabel(\"Epoch\")\n",
+    "    axes[1].set_ylabel(\"Accuracy\")\n",
+    "\n",
+    "    fig.tight_layout()\n",
+    "    fig.show()\n",
+    "    \n",
+    "    fig.savefig(save_name, dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -143,9 +237,16 @@
     "    criterion = nn.CrossEntropyLoss()\n",
     "    optimizer = optim.Adam(model.parameters())\n",
     "\n",
+    "    train_loss = []\n",
+    "    val_loss = []\n",
+    "    val_accuracy = []\n",
+    "\n",
     "    for epoch in range(epochs):\n",
+    "        \n",
+    "        model.train()\n",
     "        losses = []\n",
-    "        for i, (inputs, labels) in tqdm(enumerate(train_dataloader, 0)):\n",
+    "        \n",
+    "        for i, (inputs, labels) in tqdm(enumerate(train_dataloader, 0),desc=f\"[{epoch + 1}/{epochs}] Training\"):\n",
     "\n",
     "            # zero the parameter gradients\n",
     "            optimizer.zero_grad()\n",
@@ -158,10 +259,28 @@
     "\n",
     "            losses.append(loss.item())\n",
     "\n",
-    "        # print loss\n",
-    "        print(f'{epoch + 1}/{epochs+1} | loss: {np.round(np.mean(losses), 4)}')\n",
+    "        train_loss.append(np.mean(losses))\n",
     "\n",
-    "    torch.save(model.state_dict(), save_name)"
+    "        # validation loss\n",
+    "        model.eval()\n",
+    "        losses = []\n",
+    "        correct_preds = 0\n",
+    "        \n",
+    "        for i, (inputs, labels) in tqdm(enumerate(test_dataloader),desc=f\"[{epoch + 1}/{epochs}] Validation\"):\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            losses.append(loss.item())\n",
+    "            correct_preds += (outputs.argmax(dim=1) == labels).float().mean().item()\n",
+    "\n",
+    "        val_accuracy.append(correct_preds/len(test_dataloader))\n",
+    "        val_loss.append(np.mean(losses))\n",
+    "        \n",
+    "        # print loss\n",
+    "        print(f'\\ttrain loss: {train_loss[-1]:.4f} | val loss: {val_loss[-1]:.4f}| val acc.: {val_accuracy[-1]*100.0:.2f}\\n')\n",
+    "\n",
+    "    torch.save(model.state_dict(), save_name)\n",
+    "\n",
+    "    return train_loss, val_loss, val_accuracy"
    ]
   },
   {
@@ -170,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train(model_custom, 'model_custom.pth')"
+    "train_loss, val_loss, val_accuracy = train(model_custom, 'model_custom.pth', epochs=10)"
    ]
   },
   {
@@ -179,7 +298,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train(model_resnet, 'model_resnet.pth')"
+    "plot_loss(train_loss, val_loss, val_accuracy, 'model_custom.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loss, val_loss, val_accuracy = train(model_resnet, 'model_resnet.pth', epochs=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_loss(train_loss, val_loss, val_accuracy, 'model_resnet.png')"
    ]
   },
   {
@@ -189,6 +326,15 @@
    "outputs": [],
    "source": [
     "del model_custom, model_resnet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"Jeszcze jedna epoka ...\" - zagadnienie przetrenowania modeli\n",
+    "\n",
+    "<img src=\"model_overfitting.png\" alt=\"overfitting\" width=\"75%\"/>"
    ]
   },
   {
@@ -208,8 +354,7 @@
     "\n",
     "model_custom = CustomCNN()\n",
     "model_resnet = resnet18()\n",
-    "# Zmiana pierwszej warstwy konwolucyjnej na 1 kanał ze dla zdjęć GRAYSCALE\n",
-    "model_resnet.conv1 = nn.Conv2d(1, 64, kernel_size=7, stride=2, padding=3,bias=False)\n",
+    "model_resnet.conv1 = nn.Conv2d(1, 64, kernel_size=7, stride=2, padding=3, bias=False) # Ponownie po załadowaniu - zmiana pierwszej warstwy konwolucyjnej na 1 kanał ze dla zdjęć GRAYSCALE\n",
     "\n",
     "model_custom.load_state_dict(torch.load(\"model_custom.pth\", weights_only=True))\n",
     "model_resnet.load_state_dict(torch.load(\"model_resnet.pth\", weights_only=True))"
@@ -221,22 +366,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Prosta ewaluacja - ACCURACY / DOKŁADNOŚĆ modelu (globalna)\n",
+    "\n",
     "def evaluate(model):\n",
-    "    counter_labels = 0\n",
-    "    counter_correct_preds = 0\n",
+    "    correct_preds = 0\n",
     "\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
     "        for images, labels in test_dataloader:\n",
+    "            correct_preds += (model(images).argmax(dim=1) == labels).float().mean().item()\n",
     "\n",
-    "            predicted = torch.max(model(images).data, 1)[1]\n",
+    "    accuracy = correct_preds * 100 / len(test_dataloader)\n",
     "\n",
-    "            counter_labels += labels.size(0)\n",
-    "            counter_correct_preds += (predicted == labels).sum().item()\n",
-    "\n",
-    "    accuracy = np.round(counter_correct_preds * 100 / counter_labels, 3)\n",
-    "\n",
-    "    print(f'Global accuracy on test set: {accuracy}%')"
+    "    print(f'Global accuracy on test set: {accuracy:.2f}%')"
    ]
   },
   {
@@ -245,6 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"Custom model:\")\n",
     "evaluate(model_custom)"
    ]
   },
@@ -254,6 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"ResNet18:\")\n",
     "evaluate(model_resnet)"
    ]
   },
@@ -263,6 +407,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Confusion matrix / macierz pomyłek\n",
+    "# Jak model radzi sobie z poszczególnymi klasami\n",
+    "\n",
     "def confusion_matrix(model, n_classes=10):\n",
     "    matrix = np.zeros((n_classes, n_classes),dtype=int)\n",
     "\n",
@@ -304,26 +451,26 @@
    "outputs": [],
    "source": [
     "fig,ax = plt.subplots(1,2, figsize=(10,5))\n",
-    "ax[0].imshow(matrix_custom, cmap='ocean')\n",
+    "ax[0].imshow(matrix_custom, cmap='Blues')\n",
     "ax[0].set_title(\"Custom CNN\")\n",
     "ax[0].set_xticks(list(LABELS.keys()))\n",
     "ax[0].set_yticks(list(LABELS.keys()))\n",
     "\n",
     "ax[0].set_ylabel(\"Predicted\")\n",
-    "ax[0].set_xlabel(\"Label\")\n",
+    "ax[0].set_xlabel(\"Ground Truth\")\n",
     "\n",
     "for i in range(10):\n",
     "    for j in range(10):\n",
     "        ax[0].text(j, i, matrix_custom[i, j], ha=\"center\", va=\"center\", color=\"black\", fontsize=8)\n",
     "\n",
     "\n",
-    "ax[1].imshow(matrix_resnet, cmap='ocean')\n",
+    "ax[1].imshow(matrix_resnet, cmap='Blues')\n",
     "ax[1].set_title(\"ResNet18\")\n",
     "ax[1].set_xticks(list(LABELS.keys()))\n",
     "ax[1].set_yticks(list(LABELS.keys()))\n",
     "\n",
     "ax[1].set_ylabel(\"Predicted\")\n",
-    "ax[1].set_xlabel(\"Label\")\n",
+    "ax[1].set_xlabel(\"Ground Truth\")\n",
     "\n",
     "for i in range(10):\n",
     "    for j in range(10):\n",
@@ -338,6 +485,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Analiza macierzy pomyłek\n",
+    "# Wyznaczenie metryk dla poszczególnych klas\n",
+    "# Wyznaczenie metryk globalnych - uśrednienie po klasach\n",
+    "\n",
     "def analyze_matrix(matrix):\n",
     "    global_res = {\"accuracy\": np.zeros(matrix.shape[0]), \"precision\": np.zeros(matrix.shape[0]), \"recall\": np.zeros(matrix.shape[0]), \"f1\": np.zeros(matrix.shape[0])}\n",
     "    for i,c in LABELS.items():\n",
@@ -386,7 +537,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_ml",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
