Poprawiono kod PADIM

--- a/Student/P7/Projekt_7_MVTEC.ipynb
+++ b/Student/P7/Projekt_7_MVTEC.ipynb
@@ -136,30 +136,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_vectors_test, anomaly_types_test = padim.extract_features(test_dataset)\n",
+    "if not os.path.exists(f'results/embedding_{train_dataset.class_name}.npz'):\n",
+    "    embedding_vectors_test, anomaly_types_test = padim.extract_features(test_dataset)\n",
     "\n",
-    "embedding_vectors_test = embedding_vectors_test.cpu().numpy()\n",
+    "    embedding_vectors_test = embedding_vectors_test.cpu().numpy()\n",
     "\n",
-    "np.savez_compressed('results/embedding.npz', embedding_vectors=embedding_vectors_test, anomaly_types=anomaly_types_test)\n",
+    "    np.savez_compressed(f'results/embedding_{test_dataset.class_name}.npz', embedding_vectors=embedding_vectors_test, anomaly_types=anomaly_types_test)\n",
+    "else:\n",
+    "    data = np.load(f'results/embedding_{test_dataset.class_name}.npz')\n",
+    "    embedding_vectors_test = data[\"embedding_vectors\"]\n",
+    "    anomaly_types_test = data[\"anomaly_types\"]\n",
+    "\n",
+    "    del data\n",
+    "\n",
     "\n",
     "print(embedding_vectors_test.shape)\n",
-    "\n",
-    "del embedding_vectors_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = np.load('results/embedding.npz')\n",
-    "embedding_vectors_test = data[\"embedding_vectors\"]\n",
-    "anomaly_types_test = data[\"anomaly_types\"]\n",
-    "\n",
-    "del data\n",
-    "\n",
-    "embedding_vectors_test = np.max(embedding_vectors_test, axis=(2,3))"
+    "embedding_vectors_test = np.max(embedding_vectors_test, axis=(2,3))\n",
+    "print(embedding_vectors_test.shape)"
    ]
   },
   {
@@ -244,10 +237,13 @@
     "import glob\n",
     "import cv2 as cv\n",
     "from time import time\n",
+    "import random\n",
     "\n",
-    "#padim.threshold = 0.50\n",
+    "padim.threshold = 0.55\n",
     "\n",
-    "for im_path in glob.glob(f'dataset\\\\{CLASS}\\\\test\\\\*\\\\*.png'):\n",
+    "image_sample = random.sample(glob.glob(f'{DATASET_PATH}\\\\{CLASS}\\\\test\\\\*\\\\*.png'), k=5)\n",
+    "\n",
+    "for im_path in image_sample:\n",
     "    print(im_path)\n",
     "\n",
     "    image = cv.imread(im_path)\n",
@@ -255,6 +251,7 @@
     "    processing_time = time()\n",
     "    mask, heatmap = padim.preview(image)\n",
     "    processing_time = time() - processing_time\n",
+    "\n",
     "\n",
     "    mask = cv.resize(mask, (image.shape[1], image.shape[0]), cv.INTER_NEAREST_EXACT).astype(np.uint8)\n",
     "    heatmap = cv.resize(heatmap, (image.shape[1], image.shape[0]), cv.INTER_CUBIC).astype(np.uint8)    \n",
@@ -265,15 +262,23 @@
     "    \n",
     "    cv.drawContours(image, contours, -1, (0,255,0), 2)\n",
     "\n",
-    "    fig,ax = plt.subplots(1,1,figsize=(15,5))\n",
-    "    ax.imshow(cv.cvtColor(image, cv.COLOR_BGR2RGB))\n",
+    "    mask_path = f\"{os.path.dirname(os.path.dirname(os.path.dirname(im_path)))}\\\\ground_truth\\\\{os.path.basename(os.path.dirname(im_path))}\\\\{os.path.basename(im_path).split('.')[0]}_mask.png\"\n",
+    "    if os.path.exists(mask_path):\n",
+    "        mask_gt = cv.imread(mask_path)\n",
+    "    else:\n",
+    "        mask_gt = np.zeros_like(image)\n",
+    "    cv.drawContours(mask_gt, contours, -1, (255,0,0), 2)\n",
+    "    fig,axes = plt.subplots(1,2,figsize=(10,5))\n",
+    "    axes[0].imshow(cv.cvtColor(image, cv.COLOR_BGR2RGB))\n",
+    "    axes[0].axis(\"off\")\n",
     "\n",
-    "    ax.set_title(f\"{class_type.capitalize()} - {os.path.basename(im_path)}. Processing time: {processing_time:.1f} s\")\n",
+    "    axes[1].imshow(mask_gt, cmap='gray')\n",
+    "    axes[1].axis(\"off\")\n",
+    "\n",
+    "    fig.suptitle(f\"{class_type.capitalize()} - {os.path.basename(im_path)}. Processing time: {processing_time:.1f} s\")\n",
     "\n",
     "    fig.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "    break"
+    "    plt.show()"
    ]
   }
  ],
