Dodano instrukcję dla projektu 7

--- a/Student/P7/Projekt_7_MVTEC.ipynb
+++ b/Student/P7/Projekt_7_MVTEC.ipynb
@@ -40,7 +40,7 @@
     "# Pobieranie jedynie wybranej klasy z datasetu\n",
     "\n",
     "DATASET_PATH = os.path.abspath(\"dataset\")\n",
-    "dataset = MVTecSingleClassDataset(dataset_path=DATASET_PATH, class_name=CLASS)\n",
+    "dataset = MVTecSingleClassDataset(dataset_path=DATASET_PATH, class_name=CLASS, subset=\"train\")\n",
     "\n",
     "print(f\"Number of images: {len(dataset)}\")"
    ]
@@ -117,6 +117,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Utworzenie instancji modelu PADIM"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -128,6 +135,13 @@
     "ARCHITECTURE = 'wide_resnet50_2' #'resnet18'\n",
     "\n",
     "padim = Padim(arch=ARCHITECTURE, save_path='results', classname=CLASS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ekstrakcja cech głębokich"
    ]
   },
   {
@@ -211,6 +225,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Trening i walidacja"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -239,28 +260,30 @@
     "from time import time\n",
     "import random\n",
     "\n",
-    "padim.threshold = 0.55\n",
-    "\n",
     "image_sample = random.sample(glob.glob(f'{DATASET_PATH}\\\\{CLASS}\\\\test\\\\*\\\\*.png'), k=5)\n",
     "\n",
     "for im_path in image_sample:\n",
     "    print(im_path)\n",
     "\n",
     "    image = cv.imread(im_path)\n",
+    "    #image = modify_image(image)\n",
+    "    \n",
     "    class_type = im_path.split(\"\\\\\")[-2]\n",
     "    processing_time = time()\n",
     "    mask, heatmap = padim.preview(image)\n",
     "    processing_time = time() - processing_time\n",
+    "\n",
+    "    preview = image.copy()\n",
     "\n",
     "\n",
     "    mask = cv.resize(mask, (image.shape[1], image.shape[0]), cv.INTER_NEAREST_EXACT).astype(np.uint8)\n",
     "    heatmap = cv.resize(heatmap, (image.shape[1], image.shape[0]), cv.INTER_CUBIC).astype(np.uint8)    \n",
     "    heatmap = cv.applyColorMap(heatmap, cv.COLORMAP_JET)\n",
     "\n",
-    "    cv.addWeighted(heatmap, 0.5, image, 0.5, 0, image)\n",
+    "    preview = cv.addWeighted(heatmap, 0.5, preview, 0.5, 0)\n",
     "    contours = cv.findContours(mask, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)[0]\n",
     "    \n",
-    "    cv.drawContours(image, contours, -1, (0,255,0), 2)\n",
+    "    cv.drawContours(preview, contours, -1, (0,255,0), 2)\n",
     "\n",
     "    mask_path = f\"{os.path.dirname(os.path.dirname(os.path.dirname(im_path)))}\\\\ground_truth\\\\{os.path.basename(os.path.dirname(im_path))}\\\\{os.path.basename(im_path).split('.')[0]}_mask.png\"\n",
     "    if os.path.exists(mask_path):\n",
@@ -268,17 +291,179 @@
     "    else:\n",
     "        mask_gt = np.zeros_like(image)\n",
     "    cv.drawContours(mask_gt, contours, -1, (255,0,0), 2)\n",
-    "    fig,axes = plt.subplots(1,2,figsize=(10,5))\n",
+    "    fig,axes = plt.subplots(1,3,figsize=(15,5))\n",
     "    axes[0].imshow(cv.cvtColor(image, cv.COLOR_BGR2RGB))\n",
     "    axes[0].axis(\"off\")\n",
     "\n",
-    "    axes[1].imshow(mask_gt, cmap='gray')\n",
+    "    axes[1].imshow(cv.cvtColor(preview, cv.COLOR_BGR2RGB))\n",
     "    axes[1].axis(\"off\")\n",
+    "\n",
+    "    axes[2].imshow(mask_gt, cmap='gray')\n",
+    "    axes[2].axis(\"off\")\n",
     "\n",
     "    fig.suptitle(f\"{class_type.capitalize()} - {os.path.basename(im_path)}. Processing time: {processing_time:.1f} s\")\n",
     "\n",
     "    fig.tight_layout()\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modyfikacja zdjęć wejściowych - analiza odporności modelu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def modify_image(image: np.ndarray) -> np.ndarray:\n",
+    "    return (image*.50).astype(np.uint8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = glob.glob(f'{DATASET_PATH}\\\\{CLASS}\\\\test\\\\*\\\\*.png')[0]\n",
+    "\n",
+    "image = cv.imread(image)\n",
+    "image = cv.cvtColor(image, cv.COLOR_BGR2RGB)\n",
+    "image_mod = modify_image(image)\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "axes[0].imshow(image)\n",
+    "axes[1].imshow(image_mod)\n",
+    "axes[0].set_title('Original')\n",
+    "axes[1].set_title('Modified')\n",
+    "axes[0].axis('off')\n",
+    "axes[1].axis('off')\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "import cv2 as cv\n",
+    "import os\n",
+    "import sys\n",
+    "from sklearn.metrics import recall_score, precision_score, f1_score\n",
+    "\n",
+    "\n",
+    "def get_predictions(modify: bool = False):\n",
+    "\n",
+    "    predictions = []\n",
+    "    labels = []\n",
+    "\n",
+    "    for im_path in glob.glob(f'{DATASET_PATH}\\\\{CLASS}\\\\test\\\\*\\\\*.png'):\n",
+    "        print(im_path)\n",
+    "\n",
+    "        image = cv.imread(im_path)\n",
+    "        class_type = im_path.split(\"\\\\\")[-2]\n",
+    "\n",
+    "        if modify:\n",
+    "            image = modify_image(image)\n",
+    "\n",
+    "        mask, _ = padim.preview(image)\n",
+    "        pred_is_anomaly = np.count_nonzero(mask) > 0\n",
+    "        label_is_anomaly = class_type != \"good\"\n",
+    "\n",
+    "        predictions.append(pred_is_anomaly)\n",
+    "        labels.append(label_is_anomaly)\n",
+    "\n",
+    "    return labels, predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels1, predictions1 = get_predictions(modify=False)\n",
+    "labels2, predictions2 = get_predictions(modify=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recall = recall_score(labels1, predictions1)\n",
+    "precision = precision_score(labels1, predictions1)\n",
+    "f1 = f1_score(labels2, predictions2)\n",
+    "\n",
+    "print(\"\\nWithout modification\\n\")\n",
+    "\n",
+    "print(f\"All images: {len(labels1)}\")\n",
+    "print(f\"Images with anomaly: {sum(labels1)}\")\n",
+    "\n",
+    "print(f\"Recall: {recall*100.0:.2f}\")\n",
+    "print(f\"Precision: {precision*100.0:.2f}\")\n",
+    "print(f\"F1: {f1*100.0:.2f}\")\n",
+    "\n",
+    "recall = recall_score(labels2, predictions2)\n",
+    "precision = precision_score(labels2, predictions2)\n",
+    "f1 = f1_score(labels2, predictions2)\n",
+    "\n",
+    "print(\"\\nWith modification\\n\")\n",
+    "\n",
+    "print(f\"All images: {len(labels2)}\")\n",
+    "print(f\"Images with anomaly: {sum(labels2)}\")\n",
+    "\n",
+    "print(f\"Recall: {recall*100.0:.2f}\")\n",
+    "print(f\"Precision: {precision*100.0:.2f}\")\n",
+    "print(f\"F1: {f1*100.0:.2f}\")\n",
+    "\n",
+    "# Walidację wykonaliśmy jak dla zadania klasyfikacji binarnej (wykrywanie anomalii)\n",
+    "# Wyniki nie mają obiektywnego charakteru, gdyż zestaw danych nie jest ZBALANSOWANY\n",
+    "# W zbiorze testowym jest zdecydowanie więcej obrazów z anomaliami niż bez nich\n",
+    "# W związku z tym, model uzyska wysokie wyniki, nawet gdy zawsze będzie przewidywał obecność anomalii!!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wyznaczmy metryki jak dla zadania multi-klasowego (macro)\n",
+    "\n",
+    "recall = recall_score(labels1, predictions1, average='macro')\n",
+    "precision = precision_score(labels1, predictions1, average='macro', zero_division=0)\n",
+    "f1 = f1_score(labels2, predictions2, average='macro', zero_division=0)\n",
+    "\n",
+    "print(\"\\nWithout modification\\n\")\n",
+    "\n",
+    "print(f\"All images: {len(labels1)}\")\n",
+    "print(f\"Images with anomaly: {sum(labels1)}\")\n",
+    "\n",
+    "print(f\"Recall: {recall*100.0:.2f}\")\n",
+    "print(f\"Precision: {precision*100.0:.2f}\")\n",
+    "print(f\"F1: {f1*100.0:.2f}\")\n",
+    "\n",
+    "recall = recall_score(labels2, predictions2, average='macro')\n",
+    "precision = precision_score(labels2, predictions2, average='macro', zero_division=0)\n",
+    "f1 = f1_score(labels2, predictions2, average='macro', zero_division=0)\n",
+    "\n",
+    "print(\"\\nWith modification\\n\")\n",
+    "\n",
+    "print(f\"All images: {len(labels2)}\")\n",
+    "print(f\"Images with anomaly: {sum(labels2)}\")\n",
+    "\n",
+    "print(f\"Recall: {recall*100.0:.2f}\")\n",
+    "print(f\"Precision: {precision*100.0:.2f}\")\n",
+    "print(f\"F1: {f1*100.0:.2f}\")"
    ]
   }
  ],
