Dodano nowy plik z danymi oraz zaktualizowano notatnik projektu 2, poprawiając komentarze i ścieżki do plików.

--- a/Student/P2/Projekt_2.ipynb
+++ b/Student/P2/Projekt_2.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "print(a-b+c)\n",
     "# Komórka ma dostęp do zmiennych zadeklarowanych w innych komórkach\n",
-    "# Kolejność ułożenia komórek nie ma znaczenia, jedynie kolejność ich wywołania"
+    "# Kolejność ułożenia komórek nie ma znaczenia, ważna jest jedynie kolejność ich wywołania"
    ]
   },
   {
@@ -72,10 +72,10 @@
     "i2 = -3\n",
     "f1 = 3.5\n",
     "f2 = 5.4\n",
-    "print(i1)\n",
-    "print(i2)\n",
-    "print(f1)\n",
-    "print(f2)"
+    "print(i1, type(i1))\n",
+    "print(i2, type(i2))\n",
+    "print(f1, type(f1))\n",
+    "print(f2, type(f2))"
    ]
   },
   {
@@ -226,6 +226,7 @@
    "outputs": [],
    "source": [
     "# >, <, >=, <=\n",
+    "# or, and\n",
     "a = 2\n",
     "b = 3\n",
     "c = 5\n",
@@ -255,8 +256,8 @@
     "# is\n",
     "a = None\n",
     "b = 3\n",
-    "print(a is None)\n",
-    "print(b is None)"
+    "print(\"a is None :\", a is None)\n",
+    "print(\"b is None :\", b is None)"
    ]
   },
   {
@@ -321,7 +322,7 @@
    "source": [
     "# Enumerate\n",
     "for i, v in enumerate([\"a\", \"b\", \"c\", \"d\", \"e\"]):\n",
-    "    print(i, v)"
+    "    print(i, v) # indeks, wartość"
    ]
   },
   {
@@ -331,8 +332,9 @@
    "outputs": [],
    "source": [
     "# Zip\n",
-    "for a, b in zip([1, 2, 3, 4, 5], [\"a\", \"b\", \"c\", \"d\", \"e\", \"f\", \"g\"]):\n",
-    "    print(a, b)"
+    "for a, b in zip([1, 2, 3, 4, 5], [\"a\", \"b\", \"c\", \"d\", \"e\", \"f\", \"g\", \"h\", \"i\"]):\n",
+    "    print(a, b) # wartość z listy 1, wartość z listy 2\n",
+    "    # Jeśli listy mają różne długości, zip zakończy iterację na najkrótszej liście"
    ]
   },
   {
@@ -344,7 +346,7 @@
     "# Break\n",
     "a = 1\n",
     "while True:\n",
-    "    if a >= 32:\n",
+    "    if a >= 32: # jeśli a jest większe lub równe 32, przerwij pętlę\n",
     "        break \n",
     "    print(a)\n",
     "    a *= 2"
@@ -358,7 +360,7 @@
    "source": [
     "# Continue\n",
     "for i in range(10):\n",
-    "    if i % 2 == 0:\n",
+    "    if i % 2 == 0: # jeśli liczba jest parzysta, pomiń ją\n",
     "        continue\n",
     "    print(i)"
    ]
@@ -420,7 +422,7 @@
     "    print(args)\n",
     "    print(kwargs)\n",
     "\n",
-    "funkcja(1, 2, 3, 4, 5, a=\"a\", b=\"b\", c=\"c\")"
+    "funkcja(1, 2, 3, 4, 5, a=\"arg_a\", b=\"arg_b\", c=\"arg_c\")"
    ]
   },
   {
@@ -493,7 +495,7 @@
     "\n",
     "for i in range(5):\n",
     "    print(i)\n",
-    "    time.sleep(1)"
+    "    time.sleep(1.0) # Czekaj 1 sekundę"
    ]
   },
   {
@@ -503,7 +505,7 @@
    "outputs": [],
    "source": [
     "import random\n",
-    "print(random.randint(0, 10))"
+    "print(random.randint(0, 10)) # Losowa liczba całkowita z zakresu 0-10"
    ]
   },
   {
@@ -515,7 +517,7 @@
     "from math import sqrt\n",
     "from random import random as rand\n",
     "\n",
-    "print(sqrt(rand()*100.0))"
+    "print(sqrt(rand()*100.0)) # Pierwiastek z losowej liczby z zakresu 0-100"
    ]
   },
   {
@@ -596,7 +598,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env_ml",
    "language": "python",
    "name": "python3"
   },
