--- a/Student/P2/Projekt_2_pandas.ipynb
+++ b/Student/P2/Projekt_2_pandas.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_DATA = \"Dane\\\\Dane.csv\""
+    "PATH_DATA = \"Dane.csv\""
    ]
   },
   {
@@ -17,7 +17,7 @@
    "source": [
     "with open(PATH_DATA, \"r\") as file:\n",
     "    for line in file.readlines():\n",
-    "        print(line.strip())\n"
+    "        print(line.strip())"
    ]
   },
   {
